plugins {
    //spring
    id 'org.springframework.boot' version '4.0.3'
    //kotlin
    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.3.20'
    id 'org.jetbrains.kotlin.plugin.jpa' version '2.3.20'
    id 'com.google.devtools.ksp' version '2.3.6'
    id 'jacoco'

    id 'com.epages.restdocs-api-spec' version '0.19.4'
    id "org.asciidoctor.jvm.convert" version "4.0.2"
//    id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'com.kdongsu5509'
version = '0.0.1-SNAPSHOT'
description = 'ImHere Integrated Project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

asciidoctorj {
    version = "3.0.0"
}

configurations {
    asciidoctorExt
}

dependencies {
    implementation platform("org.springframework.boot:spring-boot-dependencies:4.0.4")
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:4.0.0'

    // KOTLIN
    implementation 'tools.jackson.module:jackson-module-kotlin'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'

    // JWT & SECURITY (Spring BOM에 없으므로 버전 명시 유지)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // DB & EXTERNAL
    implementation 'org.postgresql:postgresql'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
    implementation 'com.google.firebase:firebase-admin:9.8.0'
    implementation 'com.solapi:sdk:1.1.0'

    // QUERY DSL (KSP 환경)
    implementation("io.github.openfeign.querydsl:querydsl-jpa:7.1")
    ksp("io.github.openfeign.querydsl:querydsl-ksp-codegen:7.1")

    // RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // TEST (Spring BOM 적용)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
    testImplementation 'com.h2database:h2'
    testImplementation "org.mockito.kotlin:mockito-kotlin:5.2.1"

    testImplementation platform("org.testcontainers:testcontainers-bom:1.20.1")
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:postgresql'

    // TEST Docs
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.2'
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:4.0.0'
}

kotlin {
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict'
    }
    sourceSets {
        main.kotlin.srcDirs += 'build/generated/ksp/main/kotlin'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

ext {
    snippetsDir = file('build/generated-snippets')
}

test {
    outputs.dir snippetsDir
}

asciidoctor {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    dependsOn test
}

allOpen {
    annotation 'jakarta.persistence.Entity'
    annotation 'jakarta.persistence.MappedSuperclass'
    annotation 'jakarta.persistence.Embeddable'
}

openapi3 {
    setServer("http://localhost:8080")
    title = "ImHere API 문서"
    description = "User & Notification 통합 API 문서"
    version = "0.0.1"
    format = "yaml"
}

tasks.register("copyOasToSwagger", Copy) {
    dependsOn "openapi3"
    from "build/api-spec/openapi3.yaml"
    into "src/main/resources/static/docs"
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    outputs.dir snippetsDir
    finalizedBy 'jacocoTestReport', 'copyOasToSwagger'
}

tasks.named("asciidoctor") {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    dependsOn test
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = false
        csv.required = false
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/support/**",
                    "**/dto/**",
                    "**/config/**",
                    "**/exception/**",
                    "**/common/**",
                    "**/domain/**",
                    "**/*Entity*",
                    "**/port/**",
                    "**/Q*",
                    "**/*Application*"
            ])
        }))
    }
}
